<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.weatherdetails.WeatherDetailsFragment">

    <data>

        <variable
            name="viewModel"
            type="com.tolganacar.simpleweatherapp.view.weatherdetails.WeatherDetailsViewModel" />
    </data>


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayoutWeatherDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/weatherDetailsCityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@{viewModel.weatherDetailsUIModel.name}"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Istanbul" />

            <TextView
                android:id="@+id/weatherDetailsTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@{viewModel.weatherDetailsUIModel.temperature}"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherDetailsCityName"
                tools:text="Current: 10 C" />

            <TextView
                android:id="@+id/weatherDetailsFeelsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@{viewModel.weatherDetailsUIModel.feelsLike}"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherDetailsTemperature"
                tools:text="Feels Like : 9 C" />

            <LinearLayout
                android:id="@+id/linearLayoutHighLowTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weatherDetailsFeelsLike">

                <TextView
                    android:id="@+id/weatherDetailsMaxTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@{viewModel.weatherDetailsUIModel.maxTemperature}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="H:18" />


                <TextView
                    android:id="@+id/weatherDetailsMinTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:text="@{viewModel.weatherDetailsUIModel.minTemperature}"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:text="L:8" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewHumidity"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#81D4FA"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutHighLowTemperature">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/humidityText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start|center"
                        android:text="@string/humidity"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end|center"
                        android:text="@{viewModel.weatherDetailsUIModel.humidity}"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:text="%55" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewWind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="#81D4FA"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewHumidity">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/windText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start|center"
                        android:text="@string/wind"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end|center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/speed"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:layout_marginEnd="20dp"
                            android:text="@{viewModel.weatherDetailsUIModel.speed}"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:text="Speed: 12km/h" />

                        <TextView
                            android:id="@+id/gust"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:layout_marginEnd="20dp"
                            android:text="@{viewModel.weatherDetailsUIModel.gust}"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:text="Gust: 24km/h" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSeaLevel"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="#81D4FA"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewWind">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/SeaLevelText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start|center"
                        android:text="@string/sea_level"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/seaLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end|center"
                        android:text="@{String.valueOf(viewModel.weatherDetailsUIModel.seaLevel)}"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:text="1023" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewCoordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="#81D4FA"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewSeaLevel">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/coordinatesText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start|center"
                        android:text="@string/coordinates"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/latitude"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:layout_marginEnd="20dp"
                            android:text="@{viewModel.weatherDetailsUIModel.latitude}"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:text="Latitude: 41" />

                        <TextView
                            android:id="@+id/longitude"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end"
                            android:layout_marginEnd="20dp"
                            android:text="@{viewModel.weatherDetailsUIModel.longitude}"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            tools:text="Longitude: 29" />
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/weatherDetailsDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@{viewModel.weatherDetailsUIModel.weatherStatus}"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardViewCoordinates"
                tools:text="moderate rain" />

            <TextView
                android:id="@+id/textErrorWeatherDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_try_again"
                android:textColor="#D50000"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/loadingBarWeatherDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>